Fix spacing on family income determination, correcting validation styling bug

--- a/src/Hedwig/ClientApp/src/assets/styles/_uswds-theme-custom-styles.scss
+++ b/src/Hedwig/ClientApp/src/assets/styles/_uswds-theme-custom-styles.scss
@@ -528,7 +528,8 @@ $future-step-color: color('base-dark') !default;
 	border-left-color: color($theme-color-error-dark);
 
 	.usa-form-group--error {
-		margin-left: auto;
+		margin-top: 0;
+		margin-left: 0;
 		border-left: none;
 	}
 }
